fix(explorer): only apply grid once on mobile-only

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -184,7 +184,7 @@ audio::-webkit-media-controls-panel {
   grid-template-rows: repeat(4, min-content);
   align-items: center;
 
-  .explorer {
+  .mobile-only.explorer & {
     grid-area: 1 / 1 / 2 / 2;
   }
   .search {
